Bug 328532 - Remember the playlist I was using when I closed PMC last time
Summary: Remember the playlist I was using when I closed PMC last time
Status: RESOLVED FIXED
Alias: None
Product: plasma-mediacenter
Classification: Unmaintained
Component: Playlist (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR minor
Target Milestone: ---
Assignee: Sinny Kumari
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-08 05:35 UTC by Shantanu Tushar
Modified: 2014-06-21 09:40 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Shantanu Tushar 2013-12-08 05:35:21 UTC
Every time I restart PMC and go to Playlist, I see the default playlist. It should ideally remember which one I was on when I quit PMC the last time.

Reproducible: Always

Steps to Reproduce:
1. Setup PMC to have multiple playlists
2. Switch to a playlist other than Default
3. Restart PMC
Actual Results:  
Playlist shows Default

Expected Results:  
Playlist should show whatever I switched to in step2
Comment 1 Shantanu Tushar 2014-06-19 17:14:44 UTC
Git commit ea5ef1bb1b021dfcf0894eeb66bc8ba1416f520c by Shantanu Tushar, on behalf of Ashish Madeti.
Committed on 19/06/2014 at 17:14.
Pushed by shantanu into branch 'master'.

Fix for "Bug 328532 - Remember the playlist I was using when I closed PMC last time"
REVIEW: 118767

M  +6    -1    libs/mediacenter/playlistmodel.cpp

http://commits.kde.org/plasma-mediacenter/ea5ef1bb1b021dfcf0894eeb66bc8ba1416f520c
Comment 2 Shantanu Tushar 2014-06-21 09:40:41 UTC
Git commit 312950ac1408cf421a48565126df07bf4f4e44fe by Shantanu Tushar, on behalf of Ashish Madeti.
Committed on 19/06/2014 at 17:14.
Pushed by shantanu into branch 'vsrao-seriesbackend'.

Fix for "Bug 328532 - Remember the playlist I was using when I closed PMC last time"
REVIEW: 118767

M  +6    -1    libs/mediacenter/playlistmodel.cpp

http://commits.kde.org/plasma-mediacenter/312950ac1408cf421a48565126df07bf4f4e44fe