Fix for "Bug 328532 - Remember the playlist I was using when I closed PMC last time"

BUG: 328532
REVIEW: 118767